src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__empty_array_literal.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Array(
        [],
        Span(
            0..0,
        ),
    ),
)
