src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__empty_object.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Object(
        Span(
            0..0,
        ),
    ),
)
