src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__false.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Boolean(
        false,
        Span(
            0..0,
        ),
    ),
)
