src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__ident_test.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Ident(
    Ident {
        sym: "tokens",
        span: Span(
            0..0,
        ),
    },
)
