src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__null.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Null(
        Span(
            0..0,
        ),
    ),
)
