src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__number.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    String(
        "uwu",
        Span(
            0..0,
        ),
    ),
)
