src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__single_array_literal.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Array(
        [
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
        ],
        Span(
            0..0,
        ),
    ),
)
