src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__true.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Boolean(
        true,
        Span(
            0..0,
        ),
    ),
)
