src/syntax/parse/snapshots/dilaria__syntax__parse__test__primary__two_array_literal_trailing_comma.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Array(
        [
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
        ],
        Span(
            0..0,
        ),
    ),
)
